<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_gravity="center"
    tools:context="com.example.mendo.tutorial.Register">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/id_formName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15sp"
            android:inputType="text"
            android:textColor="#000"
            android:hint="@string/Hint_Name"
            android:textColorHint="#0000ff"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textAlignment="center"
            tools:layout_height="32sp"
            />
        <EditText
            android:id="@+id/id_formUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15sp"
            android:inputType="text"
            android:textColor="#000"
            android:hint="@string/Hint_User"
            android:textColorHint="#0000ff"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textAlignment="center"
            tools:layout_height="32sp"
            />
        <EditText
            android:id="@+id/id_formPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15sp"
            android:inputType="textPassword"
            android:textColor="#000"
            android:hint="@string/Hint_Pass"
            android:textColorHint="#0000ff"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textAlignment="center"
            tools:layout_height="32sp"
            />
        <EditText
            android:id="@+id/id_formCP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15sp"
            android:inputType="textPassword"
            android:textColor="#000"
            android:hint="@string/Hint_ConfPass"
            android:textColorHint="#0000ff"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textAlignment="center"
            tools:layout_height="32sp"
            />
        <EditText
            android:id="@+id/id_formGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15sp"
            android:inputType="text"
            android:textColor="#000"
            android:hint="@string/Hint_Gender"
            android:textColorHint="#0000ff"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textAlignment="center"
            tools:layout_height="32sp"
            />
        <EditText
            android:id="@+id/id_formCelPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15sp"
            android:inputType="text"
            android:textColor="#000"
            android:hint="@string/Hint_CelNum"
            android:textColorHint="#0000ff"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textAlignment="center"
            tools:layout_height="32sp"
            />
        <EditText
            android:id="@+id/id_formCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="#000"
            android:hint="@string/Hint_Country"
            android:textColorHint="#0000ff"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textAlignment="center"
            tools:layout_height="32sp"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="30sp">
            <CheckBox
                android:id="@+id/id_ckTerCon"
                android:layout_width="30sp"
                android:layout_height="30sp" />
            <TextView
                android:id="@+id/id_txtForCk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#DDAF00"
                android:textStyle="bold"
                android:text="@string/Check"/>
        </LinearLayout>
        <Button
            android:id="@+id/id_btnFormAcept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_rec3"
            android:textColor="#000"
            android:textStyle="bold"
            android:text="@string/Acept"/>
    </ScrollView>
</LinearLayout>


