<?xml version="1.0" encoding="utf-8"?>


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        tools:context="com.example.mendo.tutorial.Principal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="vertical"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="40dp"
            tools:layout_editor_absoluteY="55dp">

            <TextView
                android:id="@+id/id_txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Title"
                android:textAlignment="center"
                android:textColor="#F00"
                android:textSize="50dp"
                android:textStyle="bold"
                android:layout_marginBottom="35dp"
                tools:layout_editor_absoluteX="59dp"
                tools:layout_editor_absoluteY="0dp" />

            <EditText
                android:id="@+id/id_txtUser"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:drawableLeft="@drawable/ic_action_profile"
                android:hint="@string/Hint_User"
                android:inputType="text"
                android:textColor="#000"
                android:textColorHint="#0000ff"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_marginBottom="15dp"
                tools:layout_editor_absoluteX="5dp"
                tools:layout_editor_absoluteY="57dp"
                tools:layout_height="45sp" />

            <EditText
                android:id="@+id/id_txtPass"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_action_password"
                android:hint="@string/Hint_Pass"
                android:inputType="textPassword"
                android:textColor="#000"
                android:textColorHint="#0000ff"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_marginBottom="15dp"
                tools:layout_editor_absoluteX="5dp"
                tools:layout_editor_absoluteY="123dp"
                tools:layout_height="45sp" />

            <Button
                android:id="@+id/id_btnLogIn"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_rec3"
                android:text="@string/Log_In"
                android:textColor="#000"
                android:layout_marginBottom="10dp"
                android:textSize="18dp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="2dp"
                tools:layout_editor_absoluteY="244dp"

                tools:layout_height="40sp" />

            <Button
                android:id="@+id/id_btnSignIn"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_rec4"
                android:text="@string/Register"
                android:textColor="#000"
                android:textSize="18dp"
                android:textStyle="bold"
                android:visibility="visible"
                tools:layout_editor_absoluteX="5dp"
                tools:layout_editor_absoluteY="187dp"
                tools:layout_height="40sp" />

        </LinearLayout>

    </ScrollView>

